test/error/E12.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": {
		"if": {
			"type": "lang:if",
			"data": {}
		}
	}
}
